<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainScrollView"
    tools:context="pl.bartekpawlowski.javaquiz.MainActivity">

    <LinearLayout
        style="@style/DefaultLinearLayout">

        <android.support.v7.widget.CardView
            style="@style/Card.First">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_1"/>

                <View
                    style="@style/CardDivider"/>

                <RadioGroup
                    android:id="@+id/question_1_radio_group"
                    style="@style/CardContent">
                    <RadioButton
                        android:id="@+id/question_1_17"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_1_17" />
                    <RadioButton
                        android:id="@+id/question_1_15"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_1_15"/>
                    <RadioButton
                        android:id="@+id/question_1_21"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_1_21"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_2" />

                <View
                    style="@style/CardDivider"/>

                <CheckBox
                    android:id="@+id/question_2_cl"
                    style="@style/DefaultCheckbox.First"
                    android:text="@string/question_2_constraintlayout"/>

                <CheckBox
                    android:id="@+id/question_2_view"
                    style="@style/DefaultCheckbox"
                    android:text="@string/question_2_view"/>

                <CheckBox
                    android:id="@+id/question_2_button"
                    style="@style/DefaultCheckbox"
                    android:text="@string/question_2_button"/>

                <CheckBox
                    android:id="@+id/question_2_rl"
                    style="@style/DefaultCheckbox.Last"
                    android:text="@string/question_2_relativelayout"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_3"/>

                <View
                    style="@style/CardDivider"/>

                <EditText
                    android:id="@+id/question_3_method"
                    style="@style/DefaultTextEdit"
                    android:hint="@string/question_3_hint"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_4" />

                <View
                    style="@style/CardDivider"/>

                <CheckBox
                    android:id="@+id/question_4_android_manifest_xml"
                    style="@style/DefaultCheckbox.First"
                    android:text="@string/question_4_androidmanifest_xml"/>

                <CheckBox
                    android:id="@+id/question_4_activity_main_xml"
                    style="@style/DefaultCheckbox"
                    android:text="@string/question_4_activity_main_xml_layout_files"/>

                <CheckBox
                    android:id="@+id/question_4_main_activity_java"
                    style="@style/DefaultCheckbox"
                    android:text="@string/question_4_mainactivity_java_java_files"/>

                <CheckBox
                    android:id="@+id/question_4_strings_xml"
                    style="@style/DefaultCheckbox.Last"
                    android:text="@string/question_4_strings_xml"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_5_where_you_should_use_dp_measure_unit"/>

                <View
                    style="@style/CardDivider"/>

                <RadioGroup
                    android:id="@+id/question_5_radio_group"
                    style="@style/CardContent">
                    <RadioButton
                        android:id="@+id/question_5_padding"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_5_to_set_padding_value" />
                    <RadioButton
                        android:id="@+id/question_5_text"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_5_to_set_text_size"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_6"/>

                <View
                    style="@style/CardDivider"/>

                <EditText
                    android:id="@+id/question_6_attribute"
                    style="@style/DefaultTextEdit"
                    android:hint="@string/question_6_hint"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                style="@style/DefaultLinearLayout">

                <ImageView
                    style="@style/DefaultImageView"
                    android:src="@drawable/android_ics"
                    android:contentDescription="@string/image_content_desc_one_of_androids_logos"/>

                <TextView
                    style="@style/CardHeading"
                    android:text="@string/question_7"/>

                <View
                    style="@style/CardDivider"/>

                <RadioGroup
                    android:id="@+id/question_7_radio_group"
                    style="@style/CardContent">
                    <RadioButton
                        android:id="@+id/question_7_eclair"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_7_android_eclair" />
                    <RadioButton
                        android:id="@+id/question_7_froyo"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_7_android_froyo"/>
                    <RadioButton
                        android:id="@+id/question_7_ics"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_7_android_icecream_sandwich" />
                    <RadioButton
                        android:id="@+id/question_7_kit_kat"
                        style="@style/DefaultRadioButton"
                        android:text="@string/question_7_android_kitkat"/>
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit"
            style="@style/DefaultButton"
            android:text="@string/submit"
            android:onClick="submitScore"/>

    </LinearLayout>

</ScrollView>
